* Fixed bug where comments with ~ or # were causing modifications to be lost

CruiseControlController
----------------------
* don't try and deserialize directories that have the same name as the project. Fix by Paul Spencer

CruiseControlTagSupport
----------------------
* minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha

DefaultLabelIncrementer
----------------------
* added ability to set a default label - Patch by Garrick Olson

Email Publishers (LinkEmailPublisher and HTMLEmailPublisher)
----------------------
* failure subelements now contain an optional attribute "reportWhenFixed" to specify if the email address should be sent mail when the build is fixed.
* added emailaddressmapper attribute. Patch by Esa Laine

FileSystem Sourcecontrol
----------------------
* Fixed bug where FS was reporting the wrong path for modifications. Patch by Randy Coulman.

FTP support
----------------------
* Added CurrentBuildStatusFTPBootstrapper and CurrentBuildStatusFTPPublisher. Submitted by Matt Albrecht
* Also added an FTPPublisher. (Submitted by Matt Albrecht)

index.jsp
----------------------
* Table of projects with status from last build. Adapted from a patch by Jared Richardson

JDOM support
----------------------
* Updated signatures for compatibility with JDOM beta-9. Patch by Alban Peignier
* Fix to ConcurrentModificationException in Updater when using JDOM beta-9. Patch by Matt Albrecht

JMX Interface
----------------------
* Added a halt operation on the CruiseControl process JMX interface. Patch from Matt Albrecht
* Renamed start operation to resume.
* Renamed stop operation to pause.

logfile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

main.jsp & navigation.jsp
----------------------
* Fix for compatability with Tomcat 5.0. Patch from Robert Pearse
* Include sub-jsps instead of having all the content in main.jsp

MergeLogger